# modules/apps/export-import/export-import-rest-impl/src/main/java/com/liferay/exportimport/rest/internal/resource/v1_0/ImportPreviewResourceImpl.java
@@ -16,9 +16,12 @@ import com.liferay.exportimport.kernel.service.ExportImportLocalService;
 import com.liferay.exportimport.kernel.staging.Staging;
 import com.liferay.exportimport.rest.dto.v1_0.ImportPreview;
 import com.liferay.exportimport.rest.dto.v1_0.PreviewPortletDataHandler;
+import com.liferay.exportimport.rest.dto.v1_0.PreviewSite;
 import com.liferay.exportimport.rest.internal.util.PermissionUtil;
 import com.liferay.exportimport.rest.internal.util.PreviewPortletDataHandlerUtil;
 import com.liferay.exportimport.rest.resource.v1_0.ImportPreviewResource;
+import com.liferay.exportimport.site.LARSite;
+import com.liferay.exportimport.site.LARSiteReader;
 import com.liferay.portal.kernel.exception.PortalException;
 import com.liferay.portal.kernel.json.JSONObject;
 import com.liferay.portal.kernel.model.Group;
@@ -28,6 +31,7 @@ import com.liferay.portal.kernel.service.LayoutService;
 import com.liferay.portal.kernel.service.PortletLocalService;
 import com.liferay.portal.kernel.service.ServiceContext;
 import com.liferay.portal.kernel.util.GetterUtil;
+import com.liferay.portal.kernel.util.ListUtil;
 import com.liferay.portal.kernel.util.StringUtil;
 import com.liferay.portal.kernel.util.Validator;
 import com.liferay.portal.vulcan.multipart.BinaryFile;
@@ -210,9 +214,21 @@ public class ImportPreviewResourceImpl extends BaseImportPreviewResourceImpl {
 				continue;
 			}
 
+			PortletDataHandler portletDataHandler =
+				portlet.getPortletDataHandlerInstance();
+
+			// A hidden data handler is one the user does not pick with a
+			// checkbox, because something else in the UI decides what it
+			// carries. Offering it as a section of its own would be offering
+			// the same choice twice.
+
+			if ((portletDataHandler != null) && portletDataHandler.isHidden()) {
+				continue;
+			}
+
 			PreviewPortletDataHandlerUtil.addPreviewPortletDataHandler(
 				contextCompany.getCompanyId(), locale, manifestSummary, portlet,
-				portlet.getPortletDataHandlerInstance(),
+				portletDataHandler,
 				PortletDataHandler::getImportPortletDataHandlerControls,
 				portletScoped, previewPortletDataHandlersMap);
 		}
@@ -252,6 +268,9 @@ public class ImportPreviewResourceImpl extends BaseImportPreviewResourceImpl {
 						PreviewPortletDataHandlerUtil.
 							toPreviewPortletDataHandlerSections(
 								locale, previewPortletDataHandlersMap));
+				setPreviewSites(
+					() -> _toPreviewSites(
+						_larSiteReader.getLARSites(fileEntry)));
 			}
 		};
 	}
@@ -265,6 +284,49 @@ public class ImportPreviewResourceImpl extends BaseImportPreviewResourceImpl {
 		}
 
 		return group;
+	}
+
+	private PreviewSite[] _toPreviewSites(List<LARSite> larSites) {
+		if (ListUtil.isEmpty(larSites)) {
+			return new PreviewSite[0];
+		}
+
+		PreviewSite[] previewSites = new PreviewSite[larSites.size()];
+
+		for (int i = 0; i < larSites.size(); i++) {
+			LARSite larSite = larSites.get(i);
+
+			previewSites[i] = new PreviewSite() {
+				{
+					setChildSiteCount(larSite::getChildSiteCount);
+					setDescriptiveName(larSite::getName);
+
+					// Matched by external reference code, which is what
+					// identifies a site across instances. A site of the same
+					// name is a different site.
+
+					setExistsInInstance(
+						() -> {
+							Group group =
+								groupLocalService.
+									fetchGroupByExternalReferenceCode(
+										larSite.getExternalReferenceCode(),
+										contextCompany.getCompanyId());
+
+							if (group == null) {
+								return false;
+							}
+
+							return true;
+						});
+					setExternalReferenceCode(larSite::getExternalReferenceCode);
+					setGlobal(larSite::isGlobal);
+					setPath(larSite::getPath);
+				}
+			};
+		}
+
+		return previewSites;
 	}
 
 	private void _validateImportFile(
@@ -310,6 +372,9 @@ public class ImportPreviewResourceImpl extends BaseImportPreviewResourceImpl {
 
 	@Reference
 	private ExportImportLocalService _exportImportLocalService;
+
+	@Reference
+	private LARSiteReader _larSiteReader;
 
 	@Reference
 	private LayoutService _layoutService;
